@@ -1197,11 +1197,6 @@
 # ifdef ALPHA
 #   define MACH_TYPE "ALPHA"
 #   define ALIGNMENT 8
-#   define USE_GENERIC_PUSH_REGS
-    /* Gcc and probably the DEC/Compaq compiler spill pointers to preserved */
-    /* fp registers in some cases when the target is a 21264.  The assembly */
-    /* code doesn't handle that yet, and version dependencies make that a   */
-    /* bit tricky.  Do the easy thing for now.				    */
 #   ifdef NETBSD
 #	define OS_TYPE "NETBSD"
 #	define HEURISTIC2
