@@ -1,3 +1,10 @@
+2001-06-26  Richard Henderson  <rth@redhat.com>
+
+	* alpha_mach_dep.s: Mark call-saved FP registers.
+	* include/private/gcconfig.h (ALPHA): Remove USE_GENERIC_PUSH_REGS.
+	* configure.in (alpha*): Re-enable alpha_mach_dep.s
+	* configure: Rebuild.
+
 2001-06-12  Tom Tromey  <tromey@redhat.com>
 
 	* aclocal.m4, configure: Rebuilt.
